# zephyr_l4_fac_res

./: CMakeLists.txt  prj.conf
.github/workflows/: architectures.yml  main.yml
src/: main.c
src/services/: custom_service.c  custom_service.h
src/utils/: rssi.c  rssi.h
